tests/pos/meas00a.hs
module Range () where

import Language.Haskell.Liquid.Prelude

prop0 = liquidAssertB True 
